--- a/tds/src/main/webapp/WEB-INF/web.xml
+++ b/tds/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,28 @@
     <param-value>thredds</param-value>
   </context-param>
 
+  <!-- Prometheus -->
+  <filter>
+    <filter-name>prometheusFilter</filter-name>
+    <filter-class>io.prometheus.client.filter.MetricsFilter</filter-class>
+    <init-param>
+      <param-name>metric-name</param-name>
+      <param-value>webapp_metrics_filter</param-value>
+    </init-param>
+    <init-param>
+      <param-name>help</param-name>
+      <param-value>The time taken fulfilling servlet requests</param-value>
+    </init-param>
+    <init-param>
+      <param-name>buckets</param-name>
+      <param-value>0.005,0.01,0.025,0.05,0.075,0.1,0.25,0.5,0.75,1,2.5,5,7.5,10,30,60,120,180,270,300,600,900,1800</param-value>
+    </init-param>
+    <init-param>
+      <param-name>path-components</param-name>
+      <param-value>3</param-value>
+    </init-param>
+  </filter>
+
   <!-- Turn on some more targeted debugging. -->
   <filter>
     <filter-name>RequestBracketingLogMessageFilter</filter-name>
@@ -57,6 +79,12 @@
 	    <param-value>corsFilter</param-value>
     </init-param>
   </filter>
+
+  <!-- Make prometheus first filter in mapping -->
+  <filter-mapping>
+    <filter-name>prometheusFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
   <filter-mapping>
     <filter-name>RequestBracketingLogMessageFilter</filter-name>
@@ -212,6 +240,13 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
 
+  <!-- metrics servlet -->
+  <servlet>
+    <servlet-name>metrics</servlet-name>
+    <servlet-class>io.prometheus.client.exporter.MetricsServlet</servlet-class>
+    <load-on-startup>2</load-on-startup>
+  </servlet>
+
   <!-- Setup for catalog services. (Catalog subsetting, validation, and translation into HTML.)
   <servlet>
     <servlet-name>catalogService</servlet-name>
@@ -340,6 +375,12 @@
   <servlet-mapping>
     <servlet-name>root</servlet-name>
     <url-pattern>*.gif</url-pattern>
+  </servlet-mapping>
+
+  <!-- metrics servlet -->
+  <servlet-mapping>
+    <servlet-name>metrics</servlet-name>
+    <url-pattern>/metrics</url-pattern>
   </servlet-mapping>
 
   <!-- servlet-mapping>
