--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -276,7 +276,7 @@ libraries["ncsos"] = dependencies.create("com.asascience:ncsos:1.4.3") {
     exclude group: 'edu.ucar', module: 'tds'
 }
 
-libraries["commonmark"] = "com.atlassian.commonmark:commonmark:0.17.1"
+libraries["commonmark"] = "org.commonmark:commonmark:0.17.1"
 
 ////////////////////////////////////////// Metrics //////////////////////////////////////////
 
